[tool.poetry]
name = "lgp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.34"
langgraph-sdk = "^0.1.32"
langgraph-checkpoint-sqlite = "^2.0.0"
langsmith = "^0.1.132"
langchain-community = "^0.3.1"
langchain-core = "^0.3.9"
notebook = "^7.2.2"
tavily-python = "^0.5.0"
wikipedia = "^1.4.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
